# UniwarBot

./: .gitignore  README.md  Uniwar-game-mechanics-deep-research-report.md  pyproject.toml
data/validated/: action-economy-dictionary.json  game-dictionary.json
docs/: mechanics-validation-backlog.md  uniwar-bot-development-plan.md
maps/: codex_editor_units_smoke.json  first-map.json  new-map.json  ocean.json  ocean_and_forest.json
saved_games/: First_map_game.json  Test_full_history.json  cannot_capture_base_after_another_capturing_unit_has_been_killed.json  damage_indication.json  damage_indication_issue_after_move.json  double_attack_issue.json  experience_points.json  helicopter_can_move_twice_with_split.json  new-game-state.json  sumarine_and_destroyer_the_same_hex.json  wrong_damage.json
src/uniwarbot/: __init__.py  gui_api.py  scenario_inspector.py  state.py
tests/: test_state.py
tests/fixtures/scenarios/: attack-ranged-no-retaliation.json  attack-sequential-rseed.json  attack-surface-matrix.json  attack.json  buried-resurface-rules.json  capture-complete.json  dual-occupancy-hidden.json  end-turn-city-income-override.json  end-turn-heal.json  end-turn-status-income.json  gang-up-rules.json  guardian-no-heal.json  hidden-movement-rules.json  json-round-trip.json  map-load.json  (+16 more)
tools/: download_unicalc_assets.py  generate_player_unit_assets.py
webgui/: app.jsx  game-state-editor.html  game-state-editor.jsx  index.html  package.json  play-game.html  play-game.jsx  units-stats.html  units-stats.jsx
webgui/src/: App.tsx  styles.css  types.ts
(+205 files in other folders)
